# OCRTencents

./: CMakeLists.txt  README.md  conanfile.txt  ocrimg.cpp  ocrlatex.cpp
